<resources>
    <string name="app_name">Movie</string>
    <string name="action_settings">Settings</string>
    <string name="addMovie">Add Movie</string>
    <string name="viewMovies">View Movies</string>
    <string name="saveMovie">Save Movie</string>
    <string name="title_activity_view_movie">View Movie</string>
    <string name="title_activity_add_movie">Add Movie</string>
    <string name="defaultTitle">N/A</string>
    <string name="defaultPrice">0.00</string>
    <string name="defaultCinema">N/A</string>
    <string name="defaultTime">N/A</string>
    <string name="defaultDate">N/A</string>
    <string name="defaultAge">PG</string>
    <string name="DeleteButton">DELETE</string>
    <string name="MovieList">Movies</string>
    <string name="Search">Search Movie Title</string>
    <string name="movieDate">Movie Date</string>
    <string name="movieTime">Movie Time</string>
    <string name="cancel">Cancel</string>
    <string name="deleteItem">Delete this item?</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
